# starscalendars

./: .cursorrules  .editorconfig  .gitignore  .npmrc  AGENTS_UPDATE_REPORT.md  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  Makefile  QUALITY.md  README.md  SETUP-COMPLETE.md  analiz.md  anti.md  config.toml  deny.toml  erranti.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  quality-rules.toml  rust-toolchain.toml  task.md  tasks-list.md  test_solstice.rs  tz.md
.claude/: settings.local.json
.claude/agents/: backend-expert.md  dioxus-expert.md  frontend-expert.md  i18n-expert.md  project-coordinator.md  quality-guardian.md  rust-expert.md  telegram-expert.md  wasm-astro-expert.md
.githooks/: pre-commit
.github/workflows/: quality-guardian.yml
astro-rust/src/orbit/: mod.rs
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  middleware.rs  routes.rs  websocket.rs
dioxus-app/: Cargo.toml
dioxus-app/src/: i18n.rs  main.rs  server_functions.rs
docs/: context-bootstrap.md
frontend/: debug-wasm-bundler.html  debug-wasm.html  index.html  package.json  tsconfig.json  vite.config.ts  wasm-pkg
frontend/public/assets/locales/: en.ftl  ru.ftl
frontend/public/textures/: starsData.json
frontend/public/tools/: make-env.html
frontend/ref/: sceneComponent.jsx
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BabylonScene.tsx  UIOverlay.css  UIOverlay.tsx
frontend/src/i18n/: LanguageManager.ts
frontend/src/scene/: BabylonScene.tsx
frontend/src/styles/: BabylonScene.css
frontend/src/types/: wasm-shim.d.ts
frontend/src/wasm/: init.ts  types.ts
libs/app/: Cargo.toml
libs/app/src/: lib.rs  ports.rs  services.rs  usecases.rs
libs/app/src/usecases/: astronomical.rs  auth.rs  user.rs
libs/domain/: Cargo.toml
libs/domain/src/: astronomical.rs  auth.rs  errors.rs  events.rs  lib.rs  ports.rs  spiritual.rs  telegram.rs  user.rs
libs/infra/: Cargo.toml
libs/infra/src/: astronomical.rs  cache.rs  config.rs  database.rs  jwt.rs  lib.rs  mocks.rs  telegram.rs
ops/: README.md
ops/migrations/: 001_initial_schema.sql
scripts/: anti-patterns-js.sh  anti-patterns.sh  build-wasm.sh  dev-frontend.sh  production-patterns.sh  quality-monitor.sh  secret-scan.sh  setup-quality-system.sh  test-wasm.js  validate-quality-system.sh
wasm-astro/: Cargo.toml
wasm-astro/src/: lib.rs
