# 🚨 NO DOCKER POLICY: Manual deployment to AlmaLinux 9.4 server only!
# Frontend builds to static files, backend compiles on production server

[workspace]
resolver = "2"
members = [
    "backend",
    "wasm-astro", 
    "dioxus-app",
    "libs/domain",
    "libs/app",
    "libs/infra",
    # astro-rust исключен из workspace members - используется только как path dependency
]

[workspace.dependencies]
# Core Rust ecosystem (Rust 1.88+ / 2025 editions)
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"  # Последняя версия 1.0.98
thiserror = "2"  # Последняя версия 2.0.12
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
time = { version = "0.3", features = ["serde", "macros"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
config = "0.14"
figment = { version = "0.10", features = ["toml", "env"] }

# Web server stack (2025 versions)
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = "0.5"  # Последняя версия 0.5.2
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }
hyper = { version = "1", features = ["full"] }  # Последняя версия 1.6.0
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }  # Последняя версия 0.12.22

# Database and caching (2025 versions)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }  # Последняя версия 0.8.6
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }  # Последняя версия 0.32.4

# Authentication and security
jsonwebtoken = "9.3"  # Последняя версия 9.3.1
argon2 = "0.5"

# Telegram integration (2025 version)
teloxide = { version = "0.17", features = ["macros"] }  # Последняя версия 0.17.0

# WASM and frontend integration (2025 versions)
wasm-bindgen = "0.2"  # Последняя версия 0.2.100
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Dioxus fullstack (2025 alpha version)
dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
dioxus-web = "0.7.0-alpha.3"

# Astronomical calculations (local copy with bug fixes - DO NOT MODIFY astro-rust/ folder!)
astro = { path = "./astro-rust" }

# Utilities
once_cell = "1.21"  # Последняя версия 1.21.3
parking_lot = "0.12"  # Последняя версия 0.12.4
dashmap = "6.1"  # Последняя версия 6.1.0
smallvec = { version = "1.15", features = ["serde"] }  # Последняя версия 1.15.1
tinyvec = { version = "1.9", features = ["alloc", "serde"] }  # Последняя версия 1.9.0

# Async utilities
futures = "0.3"  # Последняя версия 0.3.31
futures-util = "0.3"  # Последняя версия 0.3.31
async-trait = "0.1"  # Последняя версия 0.1.88

# Development and testing
tokio-test = "0.4"  # Последняя версия 0.4.4
mockall = "0.13"  # Последняя версия 0.13.1
criterion = { version = "0.7", features = ["html_reports"] }  # Последняя версия 0.7.0
proptest = "1.7"  # Последняя версия 1.7.0

[workspace.lints]
# Inherit quality rules from quality-rules.toml
clippy.unwrap_used = "deny"
clippy.expect_used = "deny"
clippy.panic = "deny"
clippy.unimplemented = "deny"
clippy.todo = "deny"
clippy.inefficient_to_string = "deny"
clippy.large_stack_arrays = "deny"
clippy.large_const_arrays = "deny"
clippy.vec_init_then_push = "deny"
clippy.as_conversions = "deny"
clippy.cast_possible_truncation = "warn"
clippy.cast_sign_loss = "warn"
clippy.await_holding_lock = "deny"
clippy.async_yields_async = "deny"
clippy.mem_forget = "deny"
clippy.box_collection = "warn"
rust.unsafe_code = "deny"
rust.missing_docs = "warn"
rust.unused_must_use = "deny"

[profile.release]
# Aggressive optimization for production performance
opt-level = 3
lto = "fat"
panic = "abort"
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
strip = false

[profile.bench]
# Performance testing optimization
opt-level = 3
lto = "fat"
debug = false
