[package]
name = "starscalendars-infra"
version = "0.1.0"
edition = "2024"
description = "Infrastructure layer - external service implementations for StarsCalendars"
authors = ["StarsCalendars Team"]
license = "UNLICENSED"

[lints]
workspace = true

[dependencies]
# Domain layer only (Clean Architecture)
starscalendars-domain = { path = "../domain" }

# Database and caching
sqlx = { workspace = true }
redis = { workspace = true }

# HTTP client and Telegram
reqwest = { workspace = true }
teloxide = { workspace = true }

# JWT and security
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization and time
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

# Configuration
config = { workspace = true }
figment = { workspace = true }

# Performance
once_cell = { workspace = true }
dashmap = { workspace = true }

# Astronomical calculations
astro = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }